# msgot

./: .gitignore  Cargo.toml
src/: main.rs
src/client/: reqwest.rs
src/msgot/: document_parse.rs  mod.rs  msgot.rs
src/msgot/analyze/: mod.rs  page.rs
src/msgot/analyze/element_analyze/: a.rs  div.rs  img.rs  link.rs  meta.rs  mod.rs  p.rs  rest.rs  script.rs  span.rs
src/msgot/dispose/: mod.rs
src/msgot/dispose/util/: mod.rs
src/msgot/element_parse/: a_parse.rs  img_parse.rs  mod.rs
src/msgot/html_get/: mod.rs
